updated FR translations, one css z-index fix, one js fix

--- a/css/file-gallery.css
+++ b/css/file-gallery.css
@@ -447,7 +447,7 @@
 	margin-bottom: -1px;
 	margin-right: -1px;
 	padding: 0;
-	z-index: 98;
+	z-index: 99;
 	
 	border-radius: 5px;
 	-moz-border-radius: 5px;
